# functionalytics

./: .coverage  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
src/functionalytics/: __init__.py  log_this.py
tests/: test_log_this.py
