[project]
name = "functionalytics"
version = "0.6.1"
description = "Function(ality) analytics for your apps."
readme = "README.md"
authors = [
    { name = "Elias Dabbas", email = "eliasdabbas@gmail.com" }
]
requires-python = ">=3.8"

[project.urls]
homepage = "https://github.com/eliasdabbas/functionalytics"

[project.optional-dependencies]
dev = [
    "tox-uv",
    "pytest",
    "pytest-cov",
    "ruff",
    "mypy",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.coverage.run]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.ruff]
target-version = "py38"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
extend-select = ["E501"]
select = ["E4", "E7", "E9", "F", "B", "I"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]